# gametest2

./: .gitignore  CMakeLists.txt  CMakePresets.json  todo.md
src/: main.cpp
src/engine/2d/: collisionSystem.cpp  collisionSystem.hpp  sprite2d.cpp  sprite2d.hpp
src/engine/utils/: assetLoader.cpp  assetLoader.hpp
src/player/: player.cpp  player.hpp  teddy.cpp  teddy.hpp
